...
            android:layout_width="match_parent"
            android:layout_height="62dp"

            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/dateInp"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <Spinner
                android:id="@+id/spinnerPerformance"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:prompt="@string/select_performance" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Место -->
...
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeInp"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/commentInp"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

...
