...
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusForward="@id/passwordEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле для ввода пароля -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
...
                    android:imeOptions="actionDone"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Кнопка входа -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:text="@string/login_button"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="8dp"
...
