...
        android:text="@string/no_orders"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_order"
        android:src="@drawable/ic_add_alert"
...
