...
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackTint="@color/primaryColor"/>
    </LinearLayout>
</LinearLayout>
