...
    <string name="profit">Чистая прибыль</string>
    <string name="add_order">Добавить заказ</string>
    <string name="delete_order">Удалить заказ</string>

    <string name="salary_credited">Зарплата начислена</string>
    <string name="order_details">Детали заказа</string>
    <string name="save">Сохранить</string>
    <string name="close">Закрыть</string>

    <string name="edit_profile_title">Редактировать профиль</string>
    <string name="name_required">Введите имя</string>
    <string name="lastname_required">Введите фамилию</string>
    <string name="phone_required">Введите телефон</string>
...
